--- a/configs/softmax.yml
+++ b/configs/softmax.yml
@@ -1,5 +1,5 @@
 MODEL:
-  PRETRAIN_PATH: '/home/haoluo/.torch/models/resnet50-19c8e357.pth'
+  PRETRAIN_PATH: './models/resnet50-19c8e357.pth'
 
 
 INPUT:
@@ -39,6 +39,6 @@ SOLVER:
 TEST:
   IMS_PER_BATCH: 128
 
-OUTPUT_DIR: "/home/haoluo/log/reid/market1501/softmax_bs64_256x128"
+OUTPUT_DIR: "./logs/reid/market1501/softmax_bs64_256x128"
 
 
